test/files/neg/t5702-neg-bad-brace.check
t5702-neg-bad-brace.scala:14: error: Unmatched closing brace '}' ignored here
      case List(1, _*} =>
                     ^
t5702-neg-bad-brace.scala:17: error: eof expected but '}' found.
}
^
two errors found
